--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -35,7 +35,7 @@ jobs:
 
     steps:
       - name: 签出工作区
-      uses: actions/checkout@main
+      uses: actions/checkout@v4
 
       - name: 初始化编译环境
       env:
