--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,10 +41,10 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: 签出工作区
+    - name: Checkout
       uses: actions/checkout@main
 
-      - name: Initialization environment
+      - name: 初始化编译环境
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
@@ -74,6 +74,9 @@ jobs:
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
       - name: 尝试获取缓存
+          mixkey: 'mt7981'
+          prefix: ${{ github.workspace }}/openwrt
+      - name: 加载自定义feeds文件
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
