--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -72,8 +72,12 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-   - name: 尝试获取缓存
-
+    - name: 尝试获取缓存
+        uses: stupidloud/cachewrtbuild@main
+        with:
+          ccache: 'true'
+          mixkey: 'mt7981'
+          prefix: ${{ github.workspace }}/openwrt
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
