--- a/.config
+++ b/.config
@@ -23,7 +23,7 @@ CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_pistachio is not set
 # CONFIG_TARGET_mvebu is not set
 # CONFIG_TARGET_kirkwood is not set
-# CONFIG_TARGET_mediatek=y
+CONFIG_TARGET_mediatek=y
 # CONFIG_TARGET_ramips is not set
 # CONFIG_TARGET_at91 is not set
 # CONFIG_TARGET_tegra is not set
