--- a/.config
+++ b/.config
@@ -409,9 +409,12 @@ CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
 #
-CONFIG_PER_FEED_REPO=y
-CONFIG_FEED_passwall=y
 CONFIG_FEED_packages=y
 CONFIG_FEED_luci=y
 CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
+CONFIG_FEED_helloworld=y
+CONFIG_FEED_passwall=y
+CONFIG_FEED_passwall2=y
+CONFIG_FEED_passwall_packages=y
+CONFIG_FEED_Openclash=y
