--- a/.config
+++ b/.config
@@ -418,3 +418,11 @@ CONFIG_FEED_passwall=y
 CONFIG_FEED_passwall2=y
 CONFIG_FEED_passwall_packages=y
 CONFIG_FEED_Openclash=y
+#
+CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
+CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
+CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
+CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
+CONFIG_PACKAGE_simple-obfs=y
