--- a/.config
+++ b/.config
@@ -281,7 +281,7 @@ CONFIG_PACKAGE_dns2tcp=y
 CONFIG_PACKAGE_drill=y
 CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_haproxy=y
-CONFIG_PACKAGE_hysteria=y
+# CONFIG_PACKAGE_hysteria=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-ipsec=y
