--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -64,8 +64,13 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
-    - name: Update feeds
-      run: cd openwrt && ./scripts/feeds update -a
+    - name: 更新feeds中描述内容
+      run: 
+       cd openwrt && ./scripts/feeds update -a
+       cd ..
+       chmod +x $MOD_PART2_SH
+       cd openwrt
+       $GITHUB_WORKSPACE/$MOD_PART2_SH
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
