--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -72,7 +72,7 @@ jobs:
        cd openwrt
        $GITHUB_WORKSPACE/$MOD_PART2_SH
 
-    - name: Install feeds
+    - name: 安装feeds中描述内容
       run: cd openwrt && ./scripts/feeds install -a
 
     - name: Load custom configuration
