--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -13,7 +13,7 @@ name: Update Checker
 
 env:
   REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
-  REPO_BRANCH: master
+  REPO_BRANCH: openwrt-21.02
 
 on:
   workflow_dispatch:
