--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -69,9 +69,9 @@ jobs:
       run: 
        cd openwrt && ./scripts/feeds update -a
        cd ..
-       chmod +x $MOD_PART2_SH
+       chmod +x $DIY_PART2_SH
        cd openwrt
-       $GITHUB_WORKSPACE/$MOD_PART2_SH
+       $GITHUB_WORKSPACE/$DIY_PART2_SH
 
     - name: 安装feeds中描述内容
       run: cd openwrt && ./scripts/feeds install -a
