--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -86,7 +86,7 @@ jobs:
     - name: Install feeds 安装feeds中描述内容
       run: cd openwrt && ./scripts/feeds install -a
 
-    - name: 加载自定义编译配置文件
+    - name: Load custom configuration 加载自定义编译配置文件
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
